[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]

[node name="GameOver" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 467.0
margin_top = 242.0
margin_right = 556.0
margin_bottom = 358.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 81.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 73.0
margin_bottom = 14.0
text = "Game Over"

[node name="Score" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 73.0
margin_bottom = 32.0

[node name="RetryButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 73.0
margin_bottom = 66.0
text = "Retry"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 73.0
margin_bottom = 100.0
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
